fixed modal-close class to ct-modal-close

--- a/component.html
+++ b/component.html
@@ -1539,7 +1539,7 @@ Text only card
                   <div class="ct-modal ct-modal-action" id="ct-modal">
                     <div class="ct-modal-header">
                       <h2>Modal title</h2>
-                      <span class="material-icons modal-close">close</span>
+                      <span class="material-icons ct-modal-close">close</span>
                     </div>
                     <div class="ct-modal-body">
                       <p>Modal body text goes here.</p>
