--- a/component.html
+++ b/component.html
@@ -75,6 +75,7 @@
             <li><a class="link" href="#nav">Navbar</a></li>
             <li><a class="link" href="#modal">Modal</a></li>
             <li><a class="link" href="#rating">Rating</a></li>
+            <li><a class="link" href="#toast">Toast</a></li>
           </ul>
         </div>
       </section>
@@ -1650,6 +1651,93 @@ ctStar.forEach((star, index) => {
           </div>
         </section>
 
+      <section class="comp-container">
+        <div class="comp-type">
+          <h2 class="comp-title" id="toast">Toast.</h2>
+          <p>
+            Toasts are lightweight notifications designed to mimic the push notifications that have been popularized by mobile and desktop operating systems.
+          </p>
+        </div>
+
+        <div class="comp-type">
+          <h2 class="comp-title">Simple & Icon toast</h2>
+          <p>
+           Below we have simple toast and toast with icons to use make sure to add classes respectively.
+          </p>
+
+          <div class="comp-demo">
+            <div class="ct-toast">
+              <p>Your draft has been discarded.</p>
+            </div>
+            <div class="ct-toast-undo">
+              <p>Your draft has been archived.</p>
+              <button class="ct-undo">
+                <span class="material-icons">unarchive</span>
+              </button>
+            </div>
+          </div>
+
+          <div class="comp-code">
+            <pre><code class="html">
+&lt;div class="ct-toast">
+  &lt;p>Your draft has been discarded.&lt;/p>
+&lt;/div>
+&lt;div class="ct-toast-undo">
+  &lt;p>Your draft has been archived.&lt;/p>
+  &lt;button class="ct-undo">
+    &lt;span class="material-icons">unarchive&lt;/span>
+  &lt;/button>
+&lt;/div>
+</code></pre>
+          </div>
+        </div>
+
+        <div class="comp-type">
+          <h2 class="comp-title" id="toast">Toast in action</h2>
+          <p>
+            Make sure to check class names and Javascript file when you are using it in your site.
+          </p>
+
+          <div class="comp-demo">
+            <button class="ct-btn ct-blue" id="ct-toast-btn">Show Toast</button>
+            <div class="ct-toast-undo ct-toast-action">
+            <p>Message has been sent to your Ex.</p>
+            <a id="ct-undo" class="ct-undo">
+            <span class="material-icons">close</span>
+        </a>
+      </div>
+          </div>
+
+
+          <div class="comp-code">
+<pre><code class="html">
+&lt;button class="ct-btn ct-blue" id="ct-toast-btn">Show Toast&lt;/button>
+
+&lt;div class="ct-toast-undo ct-toast-action">
+  &lt;p>Message has been sent to your Ex.&lt;/p>
+  &lt;a id="ct-undo" class="ct-undo">
+  &lt;span class="material-icons">close&lt;/span>
+  &lt;/a>
+&lt;/div> 
+</code>
+<code>
+Js code for component -
+const toastBtn = document.querySelector("#ct-toast-btn");
+const toast = document.querySelector(".ct-toast-action");
+const undoBtn = document.querySelector("#ct-undo");
+toastBtn.addEventListener("click", () => {
+  toast.classList.add("ct-toast-active");
+});
+undoBtn.addEventListener("click", () => {
+  toast.classList.remove("ct-toast-active");
+});
+
+</code>
+</pre>
+          </div>
+        </div>
+      </section>
+
       
       </section>
     </main>
@@ -1660,6 +1748,7 @@ ctStar.forEach((star, index) => {
     </script>
     <script src="./components/modal/modal.js"></script>
     <script src="./components/rating/rating.js"></script>
+    <script src="./components/toast/toast.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
