update get started page in CL

--- a/component.html
+++ b/component.html
@@ -10,6 +10,8 @@
     />
     <title>CrystalUi</title>
     <link rel="icon" href="./svg/logo.svg" type="image/icon type" />
+    <link rel="stylesheet" href="./styles/root.css" />
+    <link rel="stylesheet" href="./styles/colors.css" />
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/navbar.css" />
     <link rel="stylesheet" href="./styles/hero.css" />
@@ -54,10 +56,8 @@
         <div class="side-div">
           <h2>Get Started</h2>
           <ul class="comp-list">
-            <li><a class="link" href="">Introduction</a></li>
-            <li><a class="link" href="">Typography</a></li>
-            <li><a class="link" href="">Color</a></li>
-            <li><a class="link" href="">Nothing</a></li>
+            <li><a class="link" href="#intro">Introduction</a></li>
+            <li><a class="link" href="#colors">Colors</a></li>
           </ul>
         </div>
         <div class="side-div">
@@ -76,11 +76,154 @@
             <li><a class="link" href="#modal">Modal</a></li>
             <li><a class="link" href="#rating">Rating</a></li>
             <li><a class="link" href="#toast">Toast</a></li>
+            <li><a class="link" href="#grid">Grid</a></li>
           </ul>
         </div>
       </section>
       <section class="comp-docs">
-        <section class="comp-conatainer">
+        <!-- GETTING STARTED PAGE -->
+        <main class="comp-container">
+          <div class="comp-type">
+            <h2 class="comp-title" id="intro">Introduction</h2>
+                <p>
+                  <code>CrystalUi</code> is a free, open source framework that provides ready-to-use frontend components that you can easily combine to build responsive web interfaces.
+                </p>
+          </div>
+          <div class="comp-type">
+            <h3 class="comp-title">Installation Guide</h3>
+            <p>
+              To use CrystalUi in your web interfaces , copy the following link and paste it in <head> tag of your main HTML file.
+            </p>
+
+            <div class="comp-code">
+              <pre><code class="html">
+&lt;link rel="stylesheet" href="./components.css" />
+              </code></pre>
+            </div>
+          </div>
+         
+        </main>
+
+        <main class="comp-container">
+          <div class="comp-type">
+            <h2 class="comp-title" id="colors">Colors</h2>
+                <p>
+                  <code>CrystalUi</code> comes with pre-defined color, which can be used directly in your css.
+                  We can use these colors for background of elements or on text-colors. We have losts of varients for colors as well as their weights.
+                </p>
+          </div>
+          <div class="comp-type">
+            <h3 class="comp-title" >Colors of Library</h3>
+            <p>Color pallete of <code>CrystalUi</code></p>
+            <div class="comp-demo">
+              <div class="ct-colors">
+                <div class="color-box ct-primary">
+                primary #00adb5;
+                </div>
+                <div class="color-box ct-text">
+                  text #393e46;
+                </div>
+                <div class="color-box ct-heading">
+                heading #222831;
+                </div>
+                <div class="color-box ct-body">
+                body #f9f9f9;
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title" >Colors</h2>
+            <p>Colors CrystalUi provides.</p>
+
+            <div class="comp-demo">
+              <div class="ct-colors">
+                <div class="color-box ct-gray-100">
+                gray-100 #efefef
+                </div>
+                <div class="color-box ct-gray-300">
+                  gray-300 #d1d5db;
+                </div>
+                <div class="color-box ct-gray-500">
+                gray-500 #6b7280;
+                </div>
+                <div class="color-box ct-gray-700">
+                gray-700 #374151;
+                </div>
+                <div class="color-box ct-gray-900">
+                gray-900 #1f2937;
+                </div>
+              </div>
+              
+              <div class="ct-colors">
+                <div class="color-box ct-violet-300">
+                violet-300 #d8cffc;
+                </div>
+                <div class="color-box ct-violet-500">
+                  violet-500 #8b5cf6;
+                </div>
+                <div class="color-box ct-violet-700">
+                  violet-700 #6d28d9;
+                </div>
+                <div class="color-box ct-indigo-300 ">
+                  indigo-300 #a5b4fc;
+                </div>
+                <div class="color-box ct-indigo-500 ">
+                  indigo-500 #6366f1;
+                </div>
+                <div class="color-box ct-indigo-700 ">
+                  indigo-700 #4338ca;
+                </div>
+              </div>
+
+              <div class="ct-colors">
+                <div class="color-box ct-blue-300">
+                blue-300 #bee3f8;
+                </div>
+                <div class="color-box ct-blue-500">
+                  blue-500 #3182ce;
+                </div>
+                <div class="color-box ct-blue-700">
+                  blue-700 #0b5fbe;
+                </div>
+                <div class="color-box ct-green-300 ">
+                  green-300 #c6f6d5;
+                </div>
+                <div class="color-box ct-green-500 ">
+                  green-500 #38a169;
+                </div>
+                <div class="color-box ct-green-700 ">
+                  green-700 #15803d;
+                </div>
+              </div>
+
+              <div class="ct-colors">
+                <div class="color-box ct-yellow-300">
+                yellow-300 #fff1ac;
+                </div>
+                <div class="color-box ct-yellow-500">
+                  yellow-500 #f59e0b;
+                </div>
+                <div class="color-box ct-yellow-700">
+                  yellow-700 #b45309;
+                </div>
+                <div class="color-box ct-red-300 ">
+                  red-300 #fed7d7;
+                </div>
+                <div class="color-box ct-red-500 ">
+                  red-500 #e53e3e;
+                </div>
+                <div class="color-box ct-red-700 ">
+                  red-700 #b91c1c;
+                </div>
+              </div>
+            </div>
+          </div>
+        </main>
+
+<!-- ALL THE COMPONENTS OF THE LIBRARY ARE BELOW  -->
+        <section class="comp-container">
           <div class="comp-type">
             <h2 class="comp-title" id="avatar">Avatar</h2>
             <p>
