--- a/index.html
+++ b/index.html
@@ -40,9 +40,31 @@
       <p>CrystalUi is elegant, fast and free to use CSS library.</p>
       <a href="/component.html" class="get-started">GET STARTED</a>
     </main>
-    <!-- <footer>
-      <p>Made with ❄️ By <a href="#">Miheer</a></p>
-    </footer> -->
+    <footer class="footer">
+      <p>
+        Crafted with 💙
+        <a
+          href="https://miheertamkhane.netlify.app/"
+          class="link"
+          target="_blank"
+          >Miheer</a
+        >
+      </p>
+      <div class="socials">
+        <a href="https://github.com/MiheerTamkhane" target="_blank">
+          <img src="./svg/github.svg" alt="github" />
+        </a>
+        <a href="https://twitter.com/MiheerTamkhane" target="_blank">
+          <img src="./svg/twitter.svg" alt="twitter" />
+        </a>
+        <a
+          href="https://www.linkedin.com/in/miheer-tamkhane-19417b19a/"
+          target="_blank"
+        >
+          <img src="./svg/linkedin.svg" alt="linkedin" />
+        </a>
+      </div>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
