--- a/component.html
+++ b/component.html
@@ -20,7 +20,7 @@
   <body>
     <header class="nav-container">
       <nav class="navbar">
-        <span class="nav-logo">CrystalUi</span>
+        <a href="/index.html" class="nav-logo">CrystalUi</a>
         <div class="nav-div">
           <ul class="nav-links">
             <li><a href="#" class="link">Docs</a></li>
@@ -43,7 +43,7 @@
               href="https://github.com/MiheerTamkhane/CrystalUi/tree/main"
               target="_blank"
             >
-              <img src="./assests/svg/github.svg" alt="GitHub" />
+              <img src="./svg/nav-github.svg" alt="GitHub" />
             </a>
             <span class="material-icons hamburger"> menu </span>
           </div>
@@ -118,7 +118,7 @@
             <div class="comp-demo">
               <div class="ct-colors">
                 <div class="color-box ct-primary">
-                primary #00adb5;
+                primary #02bfc9;
                 </div>
                 <div class="color-box ct-text">
                   text #393e46;
