--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </main>
     <footer class="footer">
       <p>
-        Crafted with 💙
+        Crafted with 💙 By
         <a
           href="https://miheertamkhane.netlify.app/"
           class="link"
