added link of style

--- a/component.html
+++ b/component.html
@@ -97,7 +97,7 @@
 
             <div class="comp-code">
               <pre><code class="html">
-&lt;link rel="stylesheet" href="./components.css" />
+&lt;link rel="stylesheet" href="https://crystal-ui.netlify.app/components.css" />
               </code></pre>
             </div>
           </div>
