--- a/component.html
+++ b/component.html
@@ -1578,14 +1578,14 @@ Text only card
                     <button class="ct-btn ct-gray">Search</button>
                   </div>
                   <div class="ct-nav-user">
-                    <div class="ct-nav-cart">
+                    <div class="ct-nav-icons">
                       <div class="basic-badge">
                         <span class="material-icons"> shopping_cart </span>
                         <span class="badge-pop ct-blue">4</span>
                       </div>
                       Cart
                     </div>
-                    <div class="ct-nav-signin">
+                    <div class="ct-nav-icons">
                       <div class="basic-badge">
                         <span class="material-icons"> person </span>
                       </div>
@@ -1604,11 +1604,11 @@ Text only card
         &lt;input type="search" placeholder="Search..." class="ct-input" />
         &lt;button class="ct-btn ct-gray">Search&lt;/button>
     &lt;/div>
-    &lt;div class="ct-nav-user"> &lt;div class="ct-nav-cart"> &lt;div class="basic-badge">
+    &lt;div class="ct-nav-user"> &lt;div class="ct-nav-icons"> &lt;div class="basic-badge">
         &lt;span class="material-icons"> shopping_cart &lt;/span>
         &lt;span class="badge-pop ct-blue">4&lt;/span>
   &lt;/div> Cart &lt;/div>
-  &lt;div class="ct-nav-signin"> &lt;div class="basic-badge">
+  &lt;div class="ct-nav-icons"> &lt;div class="basic-badge">
         &lt;span class="material-icons"> person &lt;/span>
   &lt;/div> Sign in &lt;/div> &lt;/div> &lt;/div>
 &lt;/nav>
