update compoentes html

--- a/component.html
+++ b/component.html
@@ -77,6 +77,7 @@
             <li><a class="link" href="#rating">Rating</a></li>
             <li><a class="link" href="#toast">Toast</a></li>
             <li><a class="link" href="#grid">Grid</a></li>
+            <li><a class="link" href="#slider">Slider</a></li>
           </ul>
         </div>
       </section>
@@ -1981,24 +1982,22 @@ undoBtn.addEventListener("click", () => {
 
       <section class="comp-container">
         <div class="comp-type">
-          <h2 class="comp-title" id="grid">Slider</h2>
+          <h2 class="comp-title" id="slider">Slider</h2>
           <p>
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum ipsa necessitatibus voluptatibus?
+            Sliders allow users to make selections from a range of values.
           </p>
         </div>
   
         <div class="comp-type">
-          <h2 class="comp-title" id="toast">Two Way slider</h2>
+          <h2 class="comp-title" id="slider">Two Way slider</h2>
           <p>
-            The <code>ct-grid</code> class makes the elements display : grid, and
-            the <code>ct-grid-2</code> class adds two columns which takes 50%, 50%
-            width of parent element.
+            Sliders reflect a range of values along a bar, from which users may select a single value. They are ideal for adjusting settings such as volume, prices, brightness, or applying image filters.
+            Just copy the below code to use it.
           </p>
           <div class="comp-demo">
             <main class="ct-slider-wrapper">
               <header class="ct-slider-header">
-                <h1>Price Range</h1>
-                <p>Use slider or type price in input field.</p>
+                <h1>Slider</h1>
               </header>
               <div class="ct-slider-price">
                 <div class="ct-slider-field">
@@ -2023,8 +2022,7 @@ undoBtn.addEventListener("click", () => {
           <div class="comp-code">
             <pre><code class="html">&lt;main class="ct-slider-wrapper">
   &lt;header class="ct-slider-header">
-    &lt;h1>Price Range&lt;/h1>
-    &lt;p>Use slider or type price in input field.&lt;/p>
+    &lt;h1>Slider&lt;/h1>
   &lt;/header>
   &lt;div class="ct-slider-price">
     &lt;div class="ct-slider-field">
