--- a/component.html
+++ b/component.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./components.css" />
   </head>
   <body>
+  
     <header class="nav-container">
       <nav class="navbar">
         <a href="/index.html" class="nav-logo">CrystalUi</a>
@@ -56,28 +57,28 @@
         <div class="side-div">
           <h2>Get Started</h2>
           <ul class="comp-list">
-            <li><a class="link" href="#intro">Introduction</a></li>
-            <li><a class="link" href="#colors">Colors</a></li>
+            <li><a class="link sidebar-link" href="#intro">Introduction</a></li>
+            <li><a class="link sidebar-link" href="#colors">Colors</a></li>
           </ul>
         </div>
         <div class="side-div">
           <h2>Components</h2>
           <ul class="comp-list">
-            <li><a class="link" href="#avatar">Avatar</a></li>
-            <li><a class="link" href="#alert">Alert</a></li>
-            <li><a class="link" href="#badge">Badge</a></li>
-            <li><a class="link" href="#button">Button</a></li>
-            <li><a class="link" href="#input">Input</a></li>
-            <li><a class="link" href="#image">Image</a></li>
-            <li><a class="link" href="#card">Card</a></li>
-            <li><a class="link" href="#text-utils">Text Utilities</a></li>
-            <li><a class="link" href="#lists">Lists</a></li>
-            <li><a class="link" href="#nav">Navbar</a></li>
-            <li><a class="link" href="#modal">Modal</a></li>
-            <li><a class="link" href="#rating">Rating</a></li>
-            <li><a class="link" href="#toast">Toast</a></li>
-            <li><a class="link" href="#grid">Grid</a></li>
-            <li><a class="link" href="#slider">Slider</a></li>
+            <li><a class="link sidebar-link" href="#avatar">Avatar</a></li>
+            <li><a class="link sidebar-link" href="#alert">Alert</a></li>
+            <li><a class="link sidebar-link" href="#badge">Badge</a></li>
+            <li><a class="link sidebar-link" href="#button">Button</a></li>
+            <li><a class="link sidebar-link" href="#input">Input</a></li>
+            <li><a class="link sidebar-link" href="#image">Image</a></li>
+            <li><a class="link sidebar-link" href="#card">Card</a></li>
+            <li><a class="link sidebar-link" href="#text-utils">Text Utilities</a></li>
+            <li><a class="link sidebar-link" href="#lists">Lists</a></li>
+            <li><a class="link sidebar-link" href="#nav">Navbar</a></li>
+            <li><a class="link sidebar-link" href="#modal">Modal</a></li>
+            <li><a class="link sidebar-link" href="#rating">Rating</a></li>
+            <li><a class="link sidebar-link" href="#toast">Toast</a></li>
+            <li><a class="link sidebar-link" href="#grid">Grid</a></li>
+            <li><a class="link sidebar-link" href="#slider">Slider</a></li>
           </ul>
         </div>
       </section>
@@ -2049,7 +2050,11 @@ undoBtn.addEventListener("click", () => {
   
       </section>
       </section>
+      
     </main>
+    <button class="ct-btn floating-btn">
+      <a class="material-icons ct-float link" href="#intro">north</a>
+    </button>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.4.0/build/highlight.min.js"></script>
     <script>
