FEAT : add the active link to sidebar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <img src="./svg/logo.svg" alt="snowflake" class="main-logo" />
       <h1>CRYSTAL Ui</h1>
       <p>CrystalUi is elegant, fast and free to use CSS library.</p>
-      <a href="/component.html" class="get-started">GET STARTED</a>
+      <a href="/component.html#intro" class="get-started">GET STARTED</a>
     </main>
     <footer class="footer">
       <p>
