--- a/component.html
+++ b/component.html
@@ -57,28 +57,28 @@
         <div class="side-div">
           <h2>Get Started</h2>
           <ul class="comp-list">
-            <li><a class="link sidebar-link" href="#intro">Introduction</a></li>
-            <li><a class="link sidebar-link" href="#colors">Colors</a></li>
+            <li><a class="link sidebar-link" data-link="intro" href="#intro">Introduction</a></li>
+            <li><a class="link sidebar-link" data-link="colors" href="#colors">Colors</a></li>
           </ul>
         </div>
         <div class="side-div">
           <h2>Components</h2>
           <ul class="comp-list">
-            <li><a class="link sidebar-link" href="#avatar">Avatar</a></li>
-            <li><a class="link sidebar-link" href="#alert">Alert</a></li>
-            <li><a class="link sidebar-link" href="#badge">Badge</a></li>
-            <li><a class="link sidebar-link" href="#button">Button</a></li>
-            <li><a class="link sidebar-link" href="#input">Input</a></li>
-            <li><a class="link sidebar-link" href="#image">Image</a></li>
-            <li><a class="link sidebar-link" href="#card">Card</a></li>
-            <li><a class="link sidebar-link" href="#text-utils">Text Utilities</a></li>
-            <li><a class="link sidebar-link" href="#lists">Lists</a></li>
-            <li><a class="link sidebar-link" href="#nav">Navbar</a></li>
-            <li><a class="link sidebar-link" href="#modal">Modal</a></li>
-            <li><a class="link sidebar-link" href="#rating">Rating</a></li>
-            <li><a class="link sidebar-link" href="#toast">Toast</a></li>
-            <li><a class="link sidebar-link" href="#grid">Grid</a></li>
-            <li><a class="link sidebar-link" href="#slider">Slider</a></li>
+            <li><a class="link sidebar-link" data-link="avatar" href="#avatar">Avatar</a></li>
+            <li><a class="link sidebar-link" data-link="alert" href="#alert">Alert</a></li>
+            <li><a class="link sidebar-link" data-link="badge" href="#badge">Badge</a></li>
+            <li><a class="link sidebar-link" data-link="button" href="#button">Button</a></li>
+            <li><a class="link sidebar-link" data-link="input" href="#input">Input</a></li>
+            <li><a class="link sidebar-link" data-link="image" href="#image">Image</a></li>
+            <li><a class="link sidebar-link" data-link="card" href="#card">Card</a></li>
+            <li><a class="link sidebar-link" data-link="text-utils" href="#text-utils">Text Utilities</a></li>
+            <li><a class="link sidebar-link" data-link="lists" href="#lists">Lists</a></li>
+            <li><a class="link sidebar-link" data-link="nav" href="#nav">Navbar</a></li>
+            <li><a class="link sidebar-link" data-link="modal" href="#modal">Modal</a></li>
+            <li><a class="link sidebar-link" data-link="rating" href="#rating">Rating</a></li>
+            <li><a class="link sidebar-link" data-link="toast" href="#toast">Toast</a></li>
+            <li><a class="link sidebar-link" data-link="grid" href="#grid">Grid</a></li>
+            <li><a class="link sidebar-link" data-link="slider" href="#slider">Slider</a></li>
           </ul>
         </div>
       </section>
@@ -2066,5 +2066,6 @@ undoBtn.addEventListener("click", () => {
     <script src="./components/toast/toast.js"></script>
     <script src="./components/slider//slider.js"></script>
     <script src="./script.js"></script>
+    <script src="./sidebar.js"></script>
   </body>
 </html>
